--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,13 @@
   --yellow: #f5c32c;
   --orange: #fca61f;
   --black: #000;
+  --blue: #185a9d;
   --white: #fff;
   --gray: rgba(36, 45, 73, 0.65);
   --profileShadow: 0px 4px 17px 2px rgba(0, 0, 0, 0.25);
   --hrColor: #cfcdcd;
   --cardColor: rgba(255, 255, 255, 0.64);
-  --buttonBg: linear-gradient(98.63deg, #f9a225 0%, #f95f35 100%);
+  --buttonBg: linear-gradient(98.63deg, #43cea2 0%, #185a9d 100%);
   --inputColor: rgba(40, 52, 62, 0.07);
   --photo: #4CB256;
   --video: #4A4EB7;
