--- a/src/Components/PostSide/PostShare/PostShare.css
+++ b/src/Components/PostSide/PostShare/PostShare.css
@@ -4,12 +4,14 @@
     background-color: var(--cardColor);
     padding: 1rem;
     border-radius: 1rem;
+    border: 1px solid red;
 }
 
 .PostShare>img {
     border-radius: 50%;
-    width: 3rem;
-    height: 3rem;
+    width: 5rem;
+    height: 5rem;
+
 }
 
 .PostShare>div {
