--- a/src/Components/ProfileCard/ProfileCard.css
+++ b/src/Components/ProfileCard/ProfileCard.css
@@ -87,7 +87,7 @@
 
 .ProfileCard>span {
     font-weight: bold;
-    color: orange;
+    color: var(--black);
     align-self: center;
     margin-bottom: 1rem;
     cursor: pointer;
